Multi-Tenant Kuberenetes/Other/POD_Security_Policy/psp_test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-apparmor
  namespace: cmcns
#  annotations:
    # apparmor.security.beta.kubernetes.io/pod: unconfined # runtime/default
#    container.apparmor.security.beta.kubernetes.io/nginx: unconfined # runtime/default
  labels:
    app: nginx-apparmor
spec:
  hostNetwork: false
  containers:
  - name: nginx
    image: nginx
    resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
    ports:
    - containerPort: 9001
      hostPort: 9001
    securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
